--- a/links.html
+++ b/links.html
@@ -10,7 +10,7 @@
     <!-- Header -->
     <header>
 		
-        <h1><a href="home.html"><img src="logo white.svg" width="198.5" height="140"></a></h1>
+        <h1><a href="home.html"><img src="logo new.svg" width="198.5" height="140"></a></h1>
 
         <nav>
             <ul>
