--- a/prices.html
+++ b/prices.html
@@ -10,14 +10,14 @@
     <!-- Header -->
     <header>
 		
-        <h1><a href="home.html"><img src="logo new.svg" width="198.5" height="140"></a></h1>
+        <h1><a href="index.html"><img src="logo new.svg" width="198.5" height="140"></a></h1>
 
         <nav>
             <ul>
-                <li><a href="home.html">Home</a></li>
-                <li><a href="home.html">Our Domes</a></li>
-                <li><a href="home.html">Services</a></li>
-                <li><a href="home.html">Contact</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="prices.html">Our Domes</a></li>
+                <li><a href="index.html">Services</a></li>
+                <li><a href="#contact">Contact</a></li>
                 <li><a href="links.html">Links</a></li>
             </ul>
         </nav>
