--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
     <!-- Header -->
     <header>
 		
-        <h1><a href="home.html"><img src="logo new.svg" width="198.5" height="140"></a></h1>
+        <h1><a href="index.html"><img src="logo new.svg" width="198.5" height="140"></a></h1>
         
         <nav>
             <ul>
-                <li><a href="#home">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="prices.html">Our Domes</a></li>
                 <li><a href="#services">Services</a></li>
                 <li><a href="#contact">Contact</a></li>
