--- a/index.html
+++ b/index.html
@@ -107,12 +107,13 @@
     <!-- Contact Section -->
     <section id="contact">
         <h2>Contact Us</h2>
-        <p>Email: info@gohomes.com<br>Phone: +1 (555) 555-5555</p>
-     <form action="send_email.php" method="post">
+        <p>Email: geostructural@proton.me<br>Phone: +1 (555) 555-5555</p>
+    <!-- <form action="send_email.php" method="post">
 		<label for="email">Enter your email:</label>
 		<input type="email" id="email" name="email" required>
 		<button type="submit">Send Email</button>
-	</form>
+	</form> -->
+	    
     </section>
 
     <!-- Footer -->
