--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- Header -->
     <header>
 		
-        <h1><a href="index.html"><img src="logo new.svg" width="198.5" height="140"></a></h1>
+        <h1><a href="index.html"><img src="logo.svg" width="580" height="195"></a></h1>
         
         <nav>
             <ul>
