--- a/links.html
+++ b/links.html
@@ -46,7 +46,7 @@
     <!-- Contact Section -->
     <section id="contact">
         <h2>Contact Us</h2>
-        <p>Email: info@gohomes.com<br>Phone: +1 (555) 555-5555</p>
+        <p>Email: geostructural@proton.me<br>Phone: +1 (555) 555-5555</p>
         <label for="email">Email:</label>
 		<input type="email" id="email" name="email" placeholder="example@example.com" required>
     </section>
